test/classes/ferguson/generic-inherit-record-no-parent-methods.good
generic-inherit-record-no-parent-methods.chpl:13: error: inheritance is not currently supported for records
generic-inherit-record-no-parent-methods.chpl:13: note: Child declared as a record here
